hardened Docker file

--- a/week-7/homework7/before/Dockerfile
+++ b/week-7/homework7/before/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.11-alpine
+FROM python:3.9-alpine
 
-RUN addgroup -S appgroup && adduser -S -G appgroup appuser
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
 WORKDIR /app
 
@@ -8,8 +8,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-
-RUN chown -R appuser:appgroup /app
 
 USER appuser
 
