--- a/week-7/homework7/after/Dockerfile
+++ b/week-7/homework7/after/Dockerfile
@@ -1,6 +1,7 @@
-FROM python:3.9-alpine
 
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+FROM python:3.13-alpine
+
+RUN addgroup -S appgroup && adduser -S -G appgroup appuser
 
 WORKDIR /app
 
@@ -8,6 +9,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+RUN chown -R appuser:appgroup /app
 
 USER appuser
 
